2006-04-21  David Hampton  <hampton@employees.org>

	* src/import-export/log-replay/gnc-log-replay.c:
	* src/engine/TransLog.[ch]: Don't allow the user to open the
	current log file.  This only produces a debug message because of
	the string freeze.  Fixes #337211.  Also add a filter for '*.log'
	to the file selection dialog.

	* src/report/report-gnome/gnc-plugin-page-report.c:
	* src/gnome-utils/gnc-main-window.c: Don't allow a report page to
	be closed of it is in the process of reloading.  Make the close
	buttons on the notebook tabs insensitive when the rest of the UI
	is insensitive. Fixes 339327.

	* src/report/utility-reports/welcome-to-gnucash.scm:
	* src/report/report-gnome/report-gnome.scm: Make the "Welcome to
	GnuCash" report menu item build the entire report, instead of just
	the first sub-report.

	* src/report/report-system/report.scm:
	* src/report/report-system/report-system.scm:
	* src/report/report-gnome/gnc-plugin-page-report.c: Correctly save
	and restore multicolumn reports. Fixes 327627.

	* src/report/report-system/html-document.scm: Don't complain about
	reports without html titles.  This occurs for every embedded
	report.

	* src/gnome/glade/reconcile.glade: Remove translatable flag from a
	label. Remove unused "Reconcile" dialog. This was an old abandoned
	attempt to replace the hardcoded C reconcile dialog with one from
	a glade file.

	* src/gnome/glade/account.glade: Add a tooltip for the "hidden"
	option in the Edit Account dialog.

2006-04-19  David Hampton  <hampton@employees.org>

	* src/report/report-system/gnc-report.c: If the report already has
	an id assigned (i.e. restored reports) then add it to the table
	using that id.  Only generate ids for reports that don't have them
	yet.

	* src/gnome-utils/gnc-main-window.c: Don't call shutdown directly
	from the delete_event handler, but use a periodic idle function
	that checks to insure that gnucash isn't saving the data file