@@ -115,13 +115,13 @@ static GtkActionEntry gnc_plugin_page_invoice_actions [] =
 	{ "EditPasteAction", GTK_STOCK_PASTE, N_("_Paste"), NULL,
 	  NULL,
 	  G_CALLBACK (gnc_plugin_page_invoice_cmd_paste) },
-	{ "EditEditInvoiceAction", GTK_STOCK_MISSING_IMAGE, N_("_Edit Invoice"), NULL,
+	{ "EditEditInvoiceAction", GNC_STOCK_INVOICE_EDIT, N_("_Edit Invoice"), NULL,
 	  N_("Edit this invoice"),
 	  G_CALLBACK (gnc_plugin_page_invoice_cmd_edit) },
-	{ "EditPostInvoiceAction", GTK_STOCK_JUMP_TO, N_("_Post Invoice"), NULL,
+	{ "EditPostInvoiceAction", GNC_STOCK_INVOICE_POST, N_("_Post Invoice"), NULL,
 	  N_("Post this Invoice to your Chart of Accounts"),
 	  G_CALLBACK (gnc_plugin_page_invoice_cmd_post) },
-	{ "EditUnpostInvoiceAction", GTK_STOCK_CONVERT, N_("_Unpost Invoice"), NULL,
+	{ "EditUnpostInvoiceAction", GNC_STOCK_INVOICE_UNPOST, N_("_Unpost Invoice"), NULL,
 	  N_("Unpost this Invoice and make it editable"),
 	  G_CALLBACK (gnc_plugin_page_invoice_cmd_unpost) },
 
@@ -135,7 +135,7 @@ static GtkActionEntry gnc_plugin_page_invoice_actions [] =
 	{ "DeleteEntryAction", GTK_STOCK_DELETE, N_("_Delete"), NULL,
 	  N_("Delete the current entry"),
 	  G_CALLBACK (gnc_plugin_page_invoice_cmd_delete) },
-	{ "BlankEntryAction", GTK_STOCK_MISSING_IMAGE, N_("_Blank"), NULL,
+	{ "BlankEntryAction", GTK_STOCK_GOTO_BOTTOM, N_("_Blank"), NULL,
 	  N_("Move to the blank entry at the bottom of the Invoice"),
 	  G_CALLBACK (gnc_plugin_page_invoice_cmd_blank) },
 	{ "DuplicateEntryAction", GTK_STOCK_COPY, N_("Dup_licate Entry"), NULL,
