@@ -243,10 +243,10 @@ static GtkActionEntry gnc_plugin_page_register_actions [] =
 	{ "EditExchangeRateAction", NULL, N_("Edit E_xchange Rate"), NULL,
 	  N_("Exit the exchange rate for the current transaction"),
 	  G_CALLBACK (gnc_plugin_page_register_cmd_exchange_rate) },
-	{ "JumpTransactionAction", GTK_STOCK_JUMP_TO, N_("_Jump"), NULL,
+	{ "JumpTransactionAction", GNC_STOCK_JUMP_TO, N_("_Jump"), NULL,
 	  N_("Jump to the corresponding transaction in the other account"),
 	  G_CALLBACK (gnc_plugin_page_register_cmd_jump) },
-	{ "ScheduleTransactionAction", GTK_STOCK_REDO, N_("Sche_dule..."), NULL,
+	{ "ScheduleTransactionAction", GNC_STOCK_SCHEDULE, N_("Sche_dule..."), NULL,
 	  N_("Create a Scheduled Transaction with the current transaction as a template"),
 	  G_CALLBACK (gnc_plugin_page_register_cmd_schedule) },
 	{ "ScrubAllAction", NULL, N_("_All transactions"), NULL,
