@@ -8,6 +8,18 @@ gncpixmap_DATA = \
   delete-account.png \
   edit-account-16.png \
   edit-account.png \
+  gnc-invoice-16.png \
+  gnc-invoice.png \
+  gnc-invoice-edit-16.png \
+  gnc-invoice-edit.png \
+  gnc-invoice-post-16.png \
+  gnc-invoice-post.png \
+  gnc-invoice-unpost-16.png \
+  gnc-invoice-unpost.png \
+  gnc-jumpto-16.png \
+  gnc-jumpto.png \
+  gnc-sx-new-16.png \
+  gnc-sx-new.png \
   gnucash-icon.png \
   gnucash_splash.png \
   new-account-16.png \
